--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "gendiff": "bin/gendiff.js"
   },
   "devDependencies": {
+    "@jest/globals": "^26.6.2",
     "eslint": "^7.25.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.5",
     "jest": "^26.6.3",
+    "jest-circus": "^26.6.3",
+    "jest-cli": "^26.6.3",
     "prettier": "^2.2.1"
   },
   "dependencies": {
