--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Compares two configuration files and shows a difference",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest --bail"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,8 @@
   "type": "module",
   "jest": {
     "testEnvironment": "node",
-    "transform": {}
+    "transform": {},
+    "testRunner": "jest-circus/runner"
   },
   "bin": {
     "gendiff": "bin/gendiff.js"
